# milestro-godot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project.godot  verify_main.gd  verify_main.tscn  使用说明.txt
.github/workflows/: build-multiplatform.yml
addons/milestro/: MilestroInputBoxControl.gd  MilestroTextLabel.gd  milestro.gdextension  plugin.cfg  plugin.gd
demos/star_crawl/: crawl_gold.gdshader  star_crawl_demo.gd  star_crawl_demo.tscn
native_smoke/: CMakeLists.txt  smoke_main.cpp
scripts/: repack_local_macos_bin.sh  run_full_test.sh  run_native_smoke.sh  run_verify.sh
src/: milestro_binding.cpp  milestro_binding.h  milestro_canvas.cpp  milestro_canvas.h  milestro_font.cpp  milestro_font.h  milestro_font_face_info.cpp  milestro_font_face_info.h  milestro_font_family_info.cpp  milestro_font_family_info.h  milestro_image.cpp  milestro_image.h  milestro_input_box.cpp  milestro_input_box.h  milestro_input_box_draw_snapshot.cpp  milestro_input_box_draw_snapshot.h  milestro_native_compat.cpp  milestro_native_compat.h  milestro_paragraph.cpp  milestro_paragraph.h  milestro_paragraph_builder.cpp  milestro_paragraph_builder.h  milestro_paragraph_style.cpp  milestro_paragraph_style.h  milestro_path.cpp  milestro_path.h  milestro_reusable_text_draw_snapshot.cpp  milestro_reusable_text_draw_snapshot.h  milestro_string_comparator.cpp  milestro_string_comparator.h  milestro_strut_style.cpp  milestro_strut_style.h  milestro_svg.cpp  milestro_svg.h  milestro_text_draw_snapshot.cpp  milestro_text_draw_snapshot.h  milestro_text_style.cpp  milestro_text_style.h  milestro_unicode_normalizer.cpp  milestro_unicode_normalizer.h  (+8 more)
tests/: milestro_full_test.gd  milestro_full_test.tscn  milestro_mixed_test.gd  milestro_mixed_test.tscn  milestro_simple_test.gd  milestro_simple_test.tscn
tests/fonts/: README.md
